@@ -25,6 +25,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #9561: distutils now reads and writes egg-info files using UTF-8,
+  instead of the locale encoding.
+
 - Issue #12888: Fix a bug in HTMLParser.unescape that prevented it to escape
   more than 128 entities.  Patch by Peter Otten.
 
@@ -72,7 +75,7 @@ Core and Builtins
 
 Library
 -------
- 
+
 - Issue #8286: The distutils command sdist will print a warning message instead
   of crashing when an invalid path is given in the manifest template.
 
